--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
             </div>
 
-            <button type="button" name="start-button">Start</button>
+            <button type="button" name="start-button" onclick="soundAlarm();">Start</button>
             <button type="button" name="stop-button" disabled>Stop</button>
             <button type="button" name="pause-button" disabled>Pause</button>
         </section>
