now the clock updates the entered values

--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
             </div>
             <div class="input-group">
                 <label for="seconds-input">Seconds</label>
-                <input type="number" placeholder="0" id= "minutes-input" max="59" min="0" step="5">
+                <input type="number" placeholder="0" id= "seconds-input" max="59" min="0" step="5">
 
             </div>
 
-            <button type="button" name="start-button" onclick="soundAlarm();">Start</button>
+            <button type="button" name="start-button" onclick="">Start</button>
             <button type="button" name="stop-button" disabled>Stop</button>
             <button type="button" name="pause-button" disabled>Pause</button>
         </section>
 
-        <h2><span id="minutes">0:</span><span id="seconds">00</span></h2>
+        <h2><span id="minutes">0</span>:<span id="seconds">00</span></h2>
 
 
 
