--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-
     <head>
         <meta charset="utf-8">
         <title>Clockworks</title>
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400;800&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="styles.css">
-
     </head>
     <body>
 
@@ -25,9 +23,9 @@
 
             </div>
 
-            <button type="button" name="start-button" onclick="">Start</button>
-            <button type="button" name="stop-button" disabled>Stop</button>
-            <button type="button" name="pause-button" disabled>Pause</button>
+            <button type="button" id="start-button" onclick="startTimer();">Start</button>
+            <button type="button" id="stop-button" onclicn="stopTimer();" disabled>Stop</button>
+            <button type="button" id="pause-button" onclicn="pauseTimer();" disabled>Pause</button>
         </section>
 
         <h2><span id="minutes">0</span>:<span id="seconds">00</span></h2>
