--- a/index.html
+++ b/index.html
@@ -15,17 +15,16 @@
             <div class="input-group">
                 <label for="minutes-input">Minutes</label>
                 <input type="number" placeholder="0" id= "minutes-input" max="300" min="0" >
-
             </div>
+
             <div class="input-group">
                 <label for="seconds-input">Seconds</label>
                 <input type="number" placeholder="0" id= "seconds-input" max="59" min="0" step="5">
-
             </div>
 
             <button type="button" id="start-button" onclick="startTimer();">Start</button>
-            <button type="button" id="stop-button" onclicn="stopTimer();" disabled>Stop</button>
-            <button type="button" id="pause-button" onclicn="pauseTimer();" disabled>Pause</button>
+            <button type="button" id="stop-button" onclick="stopTimer();" disabled>Stop</button>
+            <button type="button" id="pause-button" onclick="pauseTimer();" disabled>Pause</button>
         </section>
 
         <h2><span id="minutes">0</span>:<span id="seconds">00</span></h2>
@@ -35,9 +34,7 @@
 
 
 
-		<script src="https://code.jquery.com/jquery-3.4.1.min.js"integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="crossorigin="anonymous"></script>
-        <script src="script.js" type="text/javascript">
-
-        </script>
+		<script src="https://code.jquery.com/jquery-3.4.1.min.js"integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+        <script src="script.js" type="text/javascript"></script>
     </body>
 </html>
